[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/ui/panel_brown.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/panel_grey.png" type="Texture" id=2]
[ext_resource path="res://scenes/inventory/character_interface.gd" type="Script" id=3]
[ext_resource path="res://scenes/inventory/weapon_slot.gd" type="Script" id=4]
[ext_resource path="res://scenes/inventory/Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Hack_Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/ui/checkbox_x_example.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/border.png" type="Texture" id=9]
[ext_resource path="res://scenes/inventory/hotbar_slot.gd" type="Script" id=10]
[ext_resource path="res://scenes/inventory/light_slot.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 7 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_color = Color( 0.862745, 0.862745, 0.862745, 1 )
font_data = ExtResource( 7 )

[node name="CharacterInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -232, -72 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 460.0
margin_top = 200.0
margin_right = 1460.0
margin_bottom = 780.0
color = Color( 0.333333, 0.27451, 0.27451, 0.92549 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -270.0
margin_right = 500.0
margin_bottom = 270.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 10.0
margin_right = 990.0
margin_bottom = 540.0
custom_constants/separation = 20

[node name="Inventory" parent="ColorRect/MarginContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_top = 0.0
margin_bottom = 540.0

[node name="Background" type="NinePatchRect" parent="ColorRect/MarginContainer/HBoxContainer"]
self_modulate = Color( 0.333333, 0.27451, 0.27451, 0.92549 )
margin_left = 500.0
margin_right = 980.0
margin_bottom = 540.0
rect_min_size = Vector2( 480, 540 )
texture = ExtResource( 1 )
region_rect = Rect2( 3, 5, 95, 96 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 9

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 10
custom_constants/margin_left = 15
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer"]
margin_left = 15.0
margin_top = 10.0
margin_right = 465.0
margin_bottom = 530.0

[node name="TitleBox" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox"]
margin_right = 450.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="Control" type="Control" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/TitleBox"]
visible = false
margin_right = 58.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="CharacterTitle" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/TitleBox"]
margin_right = 446.0
margin_bottom = 80.0
rect_min_size = Vector2( 325, 0 )
size_flags_horizontal = 3
alignment = 2

[node name="CharacterName" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/TitleBox/CharacterTitle"]
margin_top = 4.0
margin_right = 446.0
margin_bottom = 47.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Name"
align = 1
valign = 1

[node name="CharacterLevel" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/TitleBox/CharacterTitle"]
margin_top = 51.0
margin_right = 446.0
margin_bottom = 80.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Level"
align = 1
valign = 1

[node name="Exit" type="Control" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/TitleBox"]
margin_left = 450.0
margin_right = 450.0
margin_bottom = 80.0

[node name="Button" type="TextureRect" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/TitleBox/Exit"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -55.0
margin_top = 16.0
margin_right = -5.0
margin_bottom = 66.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 8 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox"]
margin_top = 84.0
margin_right = 450.0
margin_bottom = 334.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer"]
margin_right = 100.0
margin_bottom = 250.0

[node name="WeaponBox" type="Control" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer"]
margin_right = 100.0
rect_min_size = Vector2( 100, 0 )

[node name="WeaponLabel" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/WeaponBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = 122.0
margin_right = 40.5
margin_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 5 )
text = "Weapon"
align = 1
valign = 1

[node name="Weapon" type="TextureRect" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/WeaponBox"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 144.0
margin_right = 55.0
margin_bottom = 249.0
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/WeaponBox/Weapon"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.5
margin_right = 52.5
margin_bottom = 105.0
expand = true
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/WeaponBox/Weapon/Icon"]
position = Vector2( 50, 52 )
scale = Vector2( 2.5, 2.5 )
hframes = 16
vframes = 27
frame = 169

[node name="LightBox" type="Control" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 100.0
margin_bottom = 4.0

[node name="LightLabel" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/LightBox"]
margin_left = 15.5
margin_top = -8.0
margin_right = 80.5
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 6 )
text = "Light"
align = 1
valign = 1

[node name="Light" type="TextureRect" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/LightBox"]
margin_top = 16.0
margin_right = 105.0
margin_bottom = 121.0
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/LightBox/Light"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.5
margin_right = 52.5
margin_bottom = 105.0
expand = true
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/LightBox/Light/Icon"]
position = Vector2( 50, 52 )
scale = Vector2( 2.5, 2.5 )
hframes = 16
vframes = 27
frame = 169

[node name="Control" type="NinePatchRect" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer"]
margin_left = 104.0
margin_right = 346.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 15
patch_margin_bottom = 14

[node name="Player" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/Control" instance=ExtResource( 6 )]
position = Vector2( 115, 155 )
scale = Vector2( 10, 10 )

[node name="CollisionShape2D" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/Control/Player" index="16"]
disabled = true

[node name="AnimationTree" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/Control/Player" index="18"]
parameters/playback = SubResource( 2 )

[node name="Camera2D" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/Control/Player" index="19"]
current = false

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer"]
margin_left = 350.0
margin_right = 450.0
margin_bottom = 250.0

[node name="HotbarBox" type="Control" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer2"]
margin_right = 100.0
rect_min_size = Vector2( 100, 0 )

[node name="HotbarLabel" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer2/HotbarBox"]
margin_left = 7.0
margin_top = 78.0
margin_right = 85.0
margin_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 7 )
text = "Action
Bar"
align = 1
valign = 1

[node name="Hotbar" type="TextureRect" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer2/HotbarBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.0
margin_top = 144.0
margin_right = 49.0
margin_bottom = 249.0
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer2/HotbarBox/Hotbar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -52.5
margin_right = 52.5
margin_bottom = 52.5
expand = true
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer2/HotbarBox/Hotbar/Icon"]
position = Vector2( 50, 52 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox"]
margin_top = 338.0
margin_right = 450.0
margin_bottom = 519.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 445.0
margin_bottom = 181.0
custom_constants/separation = 20

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer"]
margin_right = 435.0
margin_bottom = 29.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_right = 84.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 3 )
text = "Stats:"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 435.0
margin_bottom = 78.0
custom_constants/separation = 50

[node name="Health" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 192.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )

[node name="Damage" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 242.0
margin_right = 435.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 435.0
margin_bottom = 127.0
custom_constants/separation = 50

[node name="LightRadius" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 192.0
margin_bottom = 29.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )

[node name="Attack-Speed" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 242.0
margin_right = 435.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 435.0
margin_bottom = 176.0
custom_constants/separation = 50

[node name="Block" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 192.0
margin_bottom = 29.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )

[node name="Knockback" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 242.0
margin_right = 435.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 971.0
margin_top = 220.0
margin_right = 1451.0
margin_bottom = 760.0
rect_min_size = Vector2( 480, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
patch_margin_left = 23
patch_margin_top = 29
patch_margin_right = 21
patch_margin_bottom = 31

[connection signal="gui_input" from="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/TitleBox/Exit/Button" to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/WeaponBox/Weapon/Icon" to="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/WeaponBox/Weapon/Icon" method="_on_Icon_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/WeaponBox/Weapon/Icon" to="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/WeaponBox/Weapon/Icon" method="_on_Icon_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/LightBox/Light/Icon" to="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/LightBox/Light/Icon" method="_on_Icon_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/LightBox/Light/Icon" to="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer/LightBox/Light/Icon" method="_on_Icon_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer2/HotbarBox/Hotbar/Icon" to="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer2/HotbarBox/Hotbar/Icon" method="_on_Icon_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer2/HotbarBox/Hotbar/Icon" to="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/VBoxContainer2/HotbarBox/Hotbar/Icon" method="_on_Icon_mouse_exited"]

[editable path="ColorRect/MarginContainer/HBoxContainer/Background/MarginContainer/VBox/HBoxContainer/Control/Player"]
